修复搜索列表并重做弹窗界面